--- a/.github/workflows/hosting-comment-checker.yml
+++ b/.github/workflows/hosting-comment-checker.yml
@@ -31,7 +31,7 @@ jobs:
           java-version: '11'
           cache: 'maven'
       - name: Build with Maven
-        run: mvn -B package
+        run: mvn -B package -Dspotbugs.skip
       - name: Run hosting checker
         run: |
           java -cp target/repository-permissions-updater-1.0-SNAPSHOT-bin/repository-permissions-updater-1.0-SNAPSHOT.jar io.jenkins.infra.repository_permissions_updater.hosting.HostingChecker ${{ github.event.issue.number }}
