Add hosting files

--- a/.github/workflows/hosting-comment-hoster.yml
+++ b/.github/workflows/hosting-comment-hoster.yml
@@ -45,11 +45,12 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         run: mvn -B package -Dspotbugs.skip
-      - name: Run hosting checker
+      - name: Run hoster
         run: |
           java -cp target/repository-permissions-updater-1.0-SNAPSHOT-bin/repository-permissions-updater-1.0-SNAPSHOT.jar io.jenkins.infra.repository_permissions_updater.hosting.Hoster ${{ github.event.issue.number }}
         env:
-          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_OAUTH: ${{ secrets.HOSTING_PAT }}
+          JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
+          JIRA_PASSWORD: ${{ secrets.JIRA_PASSWORD }}
           ORG_NAME: timja-org
-
-# https://github.com/tspascoal/get-user-teams-membership
+          TARGET_ORG_NAME: timja-org
